<?xml version="1.0" encoding="utf-8"?><!--
  ~ SPDX-FileCopyrightText: 2025 microG Project Team
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="org.microg.gms.fido.core.ui.AuthenticatorActivityFragmentData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_fido_qr_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:text="@string/fido_qr_code_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/qr_code_body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="@string/fido_qr_code_body" />

        <!-- QR Code Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_margin="16dp"
                android:elevation="4dp">

                <ImageView
                    android:id="@+id/qr_code_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:background="@android:color/white"
                    android:scaleType="fitCenter"
                    tools:src="@drawable/ic_fido_qr_code" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/qr_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/qr_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fido_ble_generating"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/fido_pin_cancel" />

    </LinearLayout>
</layout>